fix: sign in link visibility
fix: sign in link visibility

--- a/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
+++ b/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
@@ -329,7 +329,7 @@
     }
 }
 
-.site-message--subscription-banner__sign-in--visibility--hidden {
+.site-message--subscription-banner__sign-in--visibility-hidden {
     visibility: hidden;
 }
 
